# rotappo

./: Cargo.toml  Makefile.toml  nuke-timing.json  phenome-config.yaml
crates/core/rotappo-adapter-bootstrappo/: Cargo.toml
crates/core/rotappo-adapter-bootstrappo/src/: assembly.rs  health.rs  lib.rs  mapping.rs  plan.rs
crates/core/rotappo-adapter-bootstrappo/src/controller/: assembly.rs  cache.rs  catalog.rs  debug.rs  diff.rs  explain.rs  generate.rs  mod.rs  nuke.rs  reconcile.rs  rotate.rs  status.rs  visualize.rs
crates/ui/rotappo-ui-terminal/: Cargo.toml
crates/ui/rotappo-ui-terminal/src/: format.rs  lib.rs  output_mode.rs
crates/ui/rotappo-ui-terminal/src/cli/: bootstrappo.rs  mod.rs  rotato.rs
crates/ui/rotappo-ui-tui/: Cargo.toml
crates/ui/rotappo-ui-tui/src/: lib.rs  macros.rs  render.rs  runner.rs
crates/ui/rotappo-ui-tui/src/app/: actions.rs  collapse.rs  constants.rs  core.rs  hover.rs  input.rs  keyboard.rs  layout.rs  lifecycle.rs  mod.rs  panel.rs  scroll.rs  tooltips.rs
crates/ui/rotappo-ui-tui/src/layout/: dsl.rs  mod.rs  renderer.rs
crates/ui/rotappo-ui-tui/src/layout/grid/: cache.rs  mod.rs  resolver.rs  spec.rs  spin_lock.rs
crates/ui/rotappo-ui-tui/src/layout/policy/: group.rs  layout.rs  mod.rs  priority.rs  slot.rs  state.rs
crates/ui/rotappo-ui-tui/src/layout/shell_spec/: mod.rs  slots.rs  specs.rs
crates/ui/rotappo-ui-tui/src/panels/: action.rs  action_steps.rs  actions.rs  capabilities.rs  header.rs  help.rs  mod.rs  plan.rs  plan_steps.rs  problems.rs
crates/ui/rotappo-ui-tui/src/panels/logs/: controls.rs  list.rs  menu.rs  mod.rs
crates/ui/rotappo-ui-tui/src/panels/overlays/: confirmation.rs
crates/ui/rotappo-ui-tui/src/panels/settings/: mod.rs  render.rs  view.rs
crates/ui/rotappo-ui-tui/src/state/: hold.rs  hover.rs  log_menu.rs  mod.rs  ui_state.rs
crates/ui/rotappo-ui-tui/src/util/: action.rs  color.rs  mod.rs  plan.rs  problems.rs  rect.rs  time.rs  tooltip.rs
lib/adapters/phenome-adapter-primer/: Cargo.toml
lib/adapters/phenome-adapter-primer/src/: lib.rs
lib/adapters/phenome-adapter-primer/src/controller/: mod.rs
lib/adapters/phenome-adapter-primer/src/controller/actions/: generate.rs  nuke.rs  rotate.rs  visualize.rs
lib/adapters/phenome-adapter-primer/src/controller/ops/execution/: assembly.rs  reconcile.rs
lib/adapters/phenome-adapter-primer/src/controller/support/: cache.rs  catalog.rs  cluster.rs  debug.rs
lib/adapters/phenome-adapter-primer/src/runtime/: assembly.rs  bootstrap.rs  health.rs  mapping.rs
lib/core/adapters/rotappo-adapter-analytics/: Cargo.toml  README.md  build.rs
lib/core/adapters/rotappo-adapter-analytics/src/infra/: circuit_breaker.rs  cluster_manager.rs
lib/core/adapters/rotappo-adapter-analytics/src/runtime/: mod.rs
lib/core/adapters/rotappo-adapter-analytics/src/storage/: port.rs  postgres.rs  sqlite.rs  sqlite_test.rs
lib/core/adapters/rotappo-adapter-bootstrappo/: Cargo.toml  README.md
lib/core/adapters/rotappo-adapter-bootstrappo/src/: lib.rs
lib/core/adapters/rotappo-adapter-bootstrappo/src/controller/: mod.rs
lib/core/adapters/rotappo-adapter-bootstrappo/src/runtime/: bootstrap.rs  health.rs  mod.rs
lib/core/adapters/rotappo-adapter-ml/: Cargo.toml  README.md
lib/core/adapters/rotappo-adapter-ml/proto/: analytics.proto
lib/core/adapters/rotappo-adapter-ml/src/: ml_service.rs
lib/core/adapters/rotappo-adapter-ml/src/grpc/: ml.proto  mod.rs
lib/core/adapters/rotappo-adapter-notification/: Cargo.toml  README.md
lib/core/adapters/rotappo-adapter-notification/proto/: analytics.proto  notification.proto
lib/core/adapters/rotappo-adapter-notification/src/: lib.rs  notification_service.rs  service.rs
lib/core/adapters/rotappo-adapter-notification/src/grpc/: mod.rs
lib/runtime/phenome-ml/: Cargo.toml  README.md
lib/runtime/phenome-ml/src/: lib.rs
lib/runtime/phenome-ml/src/detection/: anomaly_detection.rs  root_cause.rs  tests.rs
lib/runtime/phenome-ml/src/recommendations/: recommendations.rs
lib/runtime/phenome-ml/src/scaling/: mod.rs  scaling_prediction.rs
lib/ui/phenome-ui-terminal/: Cargo.toml  README.md
lib/ui/phenome-ui-terminal/src/: format.rs  lib.rs  output_mode.rs
lib/ui/phenome-ui-terminal/src/cli/: mod.rs  plasmid.rs  primer.rs
lib/ui/phenome-ui-tui/: Cargo.toml  README.md
lib/ui/phenome-ui-tui/src/: lib.rs
lib/ui/phenome-ui-tui/src/adapter/: mod.rs
lib/ui/phenome-ui-tui/src/adapter/bootstrap/: mod.rs
lib/ui/phenome-ui-tui/src/runtime/: mod.rs  terminal.rs
lib/ui/phenome-ui-tui/src/runtime/runner/: graph.rs  mod.rs
lib/ui/rotappo-ui-terminal/: Cargo.toml  README.md
lib/ui/rotappo-ui-terminal/src/: format.rs  lib.rs  output_mode.rs
lib/ui/rotappo-ui-terminal/src/cli/: bootstrappo.rs
lib/ui/rotappo-ui-tui/: Cargo.toml  README.md
lib/ui/rotappo-ui-tui/src/: lib.rs  macros.rs  render.rs  runner.rs
lib/ui/rotappo-ui-tui/src/adapter/bootstrap/: mod.rs
lib/ui/rotappo-ui-tui/src/adapter/ui/: mod.rs
lib/ui/rotappo-ui-tui/src/app/: actions.rs  collapse.rs  core.rs  hover.rs  input.rs  layout.rs  lifecycle.rs  mod.rs  panel.rs  scroll.rs  tooltips.rs
lib/ui/rotappo-ui-tui/src/bootstrap/: app.rs  mod.rs  state.rs  terminal.rs  utils.rs
lib/ui/rotappo-ui-tui/src/bootstrap/panels/: dependency_tree.rs  header.rs  logs.rs  menu.rs  mod.rs  status.rs  summary.rs
lib/ui/rotappo-ui-tui/src/layout/: mod.rs  renderer.rs
lib/ui/rotappo-ui-tui/src/layout/grid/: mod.rs  resolver.rs
lib/ui/rotappo-ui-tui/src/layout/policy/: layout.rs
lib/ui/rotappo-ui-tui/src/layout/shell_spec/: mod.rs  specs.rs
lib/ui/rotappo-ui-tui/src/panels/: actions.rs  assembly.rs  assembly_steps.rs  capabilities.rs  header.rs  help.rs  mod.rs  problems.rs
lib/ui/rotappo-ui-tui/src/panels/logs/: controls.rs  list.rs  menu.rs
lib/ui/rotappo-ui-tui/src/panels/settings/: render.rs  view.rs
lib/ui/rotappo-ui-tui/src/runtime/: render.rs
lib/ui/rotappo-ui-tui/src/runtime/runner/: iterm.rs  kitty.rs  mod.rs
lib/ui/rotappo-ui-tui/src/state/: ui_state.rs
lib/ui/rotappo-ui-tui/src/util/: mod.rs  time.rs  tooltip.rs
(+700 files in other folders)
