[package]
name = "rotappo"
version = "0.0.1"
edition = "2024"

[workspace]
members = [
  ".",
  "crates/core/rotappo-domain",
  "crates/core/rotappo-ports",
  "crates/core/rotappo-application",
  "crates/core/rotappo-adapter-bootstrappo",
  "crates/ui/rotappo-ui-presentation",
  "crates/ui/rotappo-ui-core",
  "crates/ui/rotappo-ui-terminal",
  "crates/ui/rotappo-ui-tui",
]
resolver = "2"

[features]
module-bootstrappo = [
  "dep:rotappo-adapter-bootstrappo",
  "rotappo-ui-terminal/bootstrappo-cli",
]
module-rotato = ["rotappo-ui-terminal/rotato-cli"]
cli = ["dep:rotappo-ui-terminal", "dep:tokio"]
ui-core = ["dep:rotappo-ui-core"]
tui = ["ui-core", "dep:rotappo-ui-tui"]

[[bin]]
name = "cli"
path = "src/bin/cli.rs"
required-features = ["cli", "module-bootstrappo"]

[[bin]]
name = "tui"
path = "src/bin/tui.rs"
required-features = ["tui", "module-bootstrappo"]

[dependencies]
anyhow = "1.0.100"
rotappo-adapter-bootstrappo = { path = "crates/core/rotappo-adapter-bootstrappo", optional = true }
rotappo-application = { path = "crates/core/rotappo-application" }
rotappo-domain = { path = "crates/core/rotappo-domain" }
rotappo-ui-core = { path = "crates/ui/rotappo-ui-core", optional = true }
rotappo-ui-terminal = { path = "crates/ui/rotappo-ui-terminal", optional = true }
rotappo-ui-tui = { path = "crates/ui/rotappo-ui-tui", optional = true }
tokio = { version = "1.48.0", features = ["full"], optional = true }

[dev-dependencies]
rotappo-ui-presentation = { path = "crates/ui/rotappo-ui-presentation" }
rotappo-ui-terminal = { path = "crates/ui/rotappo-ui-terminal" }
