[package]
name = "rotappo"
version = "0.0.1"
edition = "2024"

[workspace]
members = [
  ".",
  "lib/core/foundation/rotappo-domain",
  "lib/core/foundation/rotappo-ports",
  "lib/core/runtime/rotappo-application",
  "lib/core/adapters/rotappo-adapter-bootstrappo",
  "lib/core/adapters/rotappo-adapter-analytics",
  "lib/core/adapters/rotappo-adapter-ml",
  "lib/core/adapters/rotappo-adapter-notification",
  "lib/core/runtime/rotappo-ml",
  "lib/ui/rotappo-ui-presentation",
  "lib/ui/rotappo-ui-core",
  "lib/ui/rotappo-ui-terminal",
  "lib/ui/rotappo-ui-tui",
]
resolver = "2"

[features]
module-bootstrappo = [
  "dep:rotappo-adapter-bootstrappo",
  "rotappo-ui-terminal/bootstrappo-cli",
]
module-rotato = ["rotappo-ui-terminal/rotato-cli"]
cli = ["dep:rotappo-ui-terminal", "dep:tokio"]
ui-core = ["dep:rotappo-ui-core"]
tui = ["ui-core", "dep:rotappo-ui-tui", "dep:tokio"]
analytics = ["dep:rotappo-adapter-analytics"]
ml = ["dep:rotappo-adapter-ml", "dep:rotappo-ml"]

[[bin]]
name = "cli"
path = "src/bin/cli.rs"
required-features = ["cli", "module-bootstrappo"]

[[bin]]
name = "tui"
path = "src/bin/tui.rs"
required-features = ["tui", "module-bootstrappo"]

[[bin]]
name = "analytics-service"
path = "src/bin/analytics-service.rs"
required-features = ["analytics"]

[[bin]]
name = "ml-service"
path = "src/bin/ml-service.rs"
required-features = ["ml"]

[dependencies]
anyhow = "1.0.100"
rotappo-adapter-bootstrappo = { path = "lib/core/adapters/rotappo-adapter-bootstrappo", optional = true }
rotappo-adapter-analytics = { path = "lib/core/adapters/rotappo-adapter-analytics", optional = true }
rotappo-adapter-ml = { path = "lib/core/adapters/rotappo-adapter-ml", optional = true }
rotappo-application = { path = "lib/core/runtime/rotappo-application" }
rotappo-domain = { path = "lib/core/foundation/rotappo-domain" }
rotappo-ml = { path = "lib/core/runtime/rotappo-ml", optional = true }
rotappo-ui-core = { path = "lib/ui/rotappo-ui-core", optional = true }
rotappo-ui-terminal = { path = "lib/ui/rotappo-ui-terminal", optional = true }
rotappo-ui-tui = { path = "lib/ui/rotappo-ui-tui", optional = true }
tokio = { version = "1.48.0", features = ["full"], optional = true }

[dev-dependencies]
rotappo-ui-presentation = { path = "lib/ui/rotappo-ui-presentation" }
rotappo-ui-terminal = { path = "lib/ui/rotappo-ui-terminal" }
rotappo-adapter-analytics = { path = "lib/core/adapters/rotappo-adapter-analytics" }
rotappo-adapter-ml = { path = "lib/core/adapters/rotappo-adapter-ml" }
tempfile = "3.24.0"
tokio = { version = "1.48.0", features = ["full", "test-util"] }
