[package]
name = "phenome"
version = "0.0.1"
edition = "2024"

[features]
module-primer = [
  "dep:phenome-adapter-primer",
  "phenome-ui-terminal/primer-cli",
]
module-plasmid = ["phenome-ui-terminal/plasmid-cli"]
cli = ["dep:phenome-ui-terminal", "dep:tokio"]
ui-core = ["dep:phenome-ui-core"]
tui = ["ui-core", "dep:phenome-ui-tui", "dep:tokio"]
analytics = ["dep:phenome-adapter-analytics"]
ml = ["dep:phenome-adapter-ml", "dep:phenome-ml"]

[[bin]]
name = "cli"
path = "src/bin/cli.rs"
required-features = ["cli", "module-primer"]

[[bin]]
name = "tui"
path = "src/bin/tui.rs"
required-features = ["tui", "module-primer"]

[[bin]]
name = "analytics-service"
path = "src/bin/analytics-service.rs"
required-features = ["analytics"]

[[bin]]
name = "ml-service"
path = "src/bin/ml-service.rs"
required-features = ["ml"]

[dependencies]
anyhow = "1.0.100"
phenome-adapter-primer = { path = "lib/adapters/phenome-adapter-primer", optional = true }
phenome-adapter-analytics = { path = "lib/adapters/phenome-adapter-analytics", optional = true }
phenome-adapter-ml = { path = "lib/adapters/phenome-adapter-ml", optional = true }
phenome-application = { path = "lib/runtime/phenome-application" }
phenome-domain = { path = "lib/domain/phenome-domain" }
phenome-ml = { path = "lib/runtime/phenome-ml", optional = true }
phenome-ui-core = { path = "lib/ui/phenome-ui-core", optional = true }
phenome-ui-terminal = { path = "lib/ui/phenome-ui-terminal", optional = true }
phenome-ui-tui = { path = "lib/ui/phenome-ui-tui", optional = true }
tokio = { version = "1.48.0", features = ["full"], optional = true }

[dev-dependencies]
phenome-ui-presentation = { path = "lib/ui/phenome-ui-presentation" }
phenome-ui-terminal = { path = "lib/ui/phenome-ui-terminal" }
phenome-adapter-analytics = { path = "lib/adapters/phenome-adapter-analytics" }
phenome-adapter-ml = { path = "lib/adapters/phenome-adapter-ml" }
tempfile = "3.24.0"
tokio = { version = "1.48.0", features = ["full", "test-util"] }
