[package]
name = "phenome-ui-tui"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
crossterm = "0.28.1"
graphviz-rust = "0.9.6"
ratatui = "0.29.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "time"] }
tonic = "0.12.3"
serde_json = "1.0"

primer = { path = "../../../../primer" }

phenome-application = { path = "../../runtime/phenome-application" }
phenome-domain = { path = "../../domain/phenome-domain" }
phenome-ports = { path = "../../ports/phenome-ports" }
phenome-ui-core = { path = "../phenome-ui-core" }
phenome-ui-presentation = { path = "../phenome-ui-presentation" }
phenome-adapter-analytics = { version = "0.0.1", path = "../../adapters/phenome-adapter-analytics" }
tracing = "0.1.44"
