[package]
name = "rotappo-adapter-analytics"
version = "0.0.1"
edition = "2024"
publish = false

[features]
postgres = ["dep:tokio-postgres"]

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.83"
chrono = "0.4.42"
k8s-openapi = { version = "0.26.1", features = ["v1_30"] }
kube = { version = "2.0.1", features = ["runtime", "client"] }
notify = "7.0.0"
notify-rust = "4.11.3"
polars = { version = "0.41.0", features = ["lazy", "dynamic_group_by"] }
prost = "0.13.4"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tokio = { version = "1.48.0", features = ["full"] }
tokio-postgres = { version = "0.7.12", optional = true }
tonic = "0.12.3"
tracing = "0.1.44"

rotappo-domain = { path = "../../foundation/rotappo-domain" }
rotappo-ports = { path = "../../foundation/rotappo-ports" }
uuid = { version = "1.19.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.24.0"

[build-dependencies]
protoc-bin-vendored = "3.0"
tonic-build = "0.12.3"
