[package]
name = "rotappo-adapter-bootstrappo"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.100"
inventory = "0.3.21"
k8s-openapi = { version = "0.26.1", features = ["v1_30"] }
kube = { version = "2.0.1", features = ["runtime", "client"] }
serde_yaml = "0.9"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "sync", "time"] }
tracing = "0.1.44"
validator = "0.20.0"
bootstrappo = { path = "../../../../../bootstrappo" }
bootstrappo-api = { path = "../../../../../bootstrappo/lib/api" }
rotappo-domain = { path = "../../foundation/rotappo-domain" }
rotappo-ports = { path = "../../foundation/rotappo-ports" }
rotappo-ui-tui = { path = "../../../ui/rotappo-ui-tui" }
