[package]
name = "rotappo-adapter-ml"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.83"
chrono = "0.4"
prost = "0.13.4"
tokio = { version = "1.48.0", features = ["full"] }
tonic = "0.12.3"
tracing = "0.1.44"

rotappo-domain = { path = "../foundation/rotappo-domain" }
rotappo-ml = { path = "../runtime/rotappo-ml" }
rotappo-ports = { path = "../foundation/rotappo-ports" }

[build-dependencies]
protoc-bin-vendored = "3.0"
tonic-build = "0.12.3"
