[package]
name = "rotappo-adapter-notification"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.83"
chrono = "0.4.42"
notify = "7.0.0"
notify-rust = "4.11.3"
prost = "0.13.4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tokio = { version = "1.48.0", features = ["full"] }
tonic = "0.12.3"
tracing = "0.1.44"

rotappo-domain = { path = "../foundation/rotappo-domain" }
rotappo-ports = { path = "../foundation/rotappo-ports" }

[build-dependencies]
protoc-bin-vendored = "3.0"
tonic-build = "0.12.3"
